# mrs_path_follower

./: CMakeLists.txt  package.xml  plugins.xml
include/: PathFollower.h  utils.h
launch/: path_follower.launch
scripts/: tmux.sh
scripts/custom_configs/: nimbro.yaml
simulation_scripts/simple/: session.yml
src/: PathFollower.cpp  utils.cpp
